--- a/config/docking.yaml
+++ b/config/docking.yaml
@@ -4,12 +4,12 @@ docking_server:
     initial_perception_timeout: 5.0
     wait_charge_timeout: 5.0
     dock_approach_timeout: 30.0
-    undock_linear_tolerance: 0.05
-    undock_angular_tolerance: 0.1
+    undock_linear_tolerance: 0.1
+    undock_angular_tolerance: 0.2
     max_retries: 3
     base_frame: "base_footprint"
     fixed_frame: "odom"
-    dock_backwards: true
+    dock_backwards: false
     dock_prestaging_tolerance: 0.5
 
     # Types of docks
@@ -17,13 +17,13 @@ docking_server:
     nova_carter_dock:
       # plugin: 'nova_carter_dock::NovaCarterChargingDock'
       plugin: 'opennav_docking::SimpleChargingDock'
-      docking_threshold: 0.1
-      staging_x_offset: 0.0
-      use_external_detection_pose: false
-      use_battery_status: false # true
+      docking_threshold: 0.05
+      staging_x_offset: -0.7
+      use_external_detection_pose: true
+      use_battery_status: true 
       use_stall_detection: false
 
-      external_detection_timeout: 1.0
+      external_detection_timeout: 3.0
       external_detection_translation_x: -0.18
       external_detection_translation_y: 0.0
       external_detection_rotation_roll: -1.57
@@ -36,11 +36,11 @@ docking_server:
     home_dock:
       type: 'nova_carter_dock'
       frame: map
-      pose: [-0.01, 0.0, 0.0]
+      pose: [-0.1, -0.06, 0.415]
 
     controller:
       k_phi: 3.0
       k_delta: 2.0
-      v_linear_min: 0.05
+      v_linear_min: 0.0
       v_linear_max: 0.1
-      v_angular_max: 0.05
+      v_angular_max: 0.008
